exports[`actions > group create group should work 1`] = `
Object {
  "payload": Object {
    "allAddressesGeocoded": false,
    "name": "Mock Group",
  },
  "type": "add group",
}
`;

exports[`actions > group create group should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/group/new-entity-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > group delete group should work 1`] = `
Array [
  Object {
    "payload": "group-id",
    "type": "delete group",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/organizations/organization-id",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;

exports[`actions > group update group should work 1`] = `
Object {
  "payload": Object {
    "id": "group-id",
    "name": "New Name",
  },
  "type": "update group",
}
`;
